--- a/skin/overlay.css
+++ b/skin/overlay.css
@@ -1,36 +1,59 @@
+#mail-search-bar {
+  padding-bottom: 4px;  
+}
+
 #button-write
 {
   font-family: sans-serif;
   font-weight: bold;
-  -moz-appearance: button;
-  font-size: 125%;
-  padding: 0em 1.5em;
+  /*-moz-appearance: button;*/
+  -moz-border-image: url("chrome://messenger/skin/thinbutton.png")  2 2 2 2 stretch stretch;
+  font-size: 110%;
+  padding: 0em .5em;
+  margin-top: 4px;
+  margin-bottom: 4px;
+  padding-right: 5px;
   letter-spacing: 2px;
 }
 
-.bubble {
+#button-write:hover
+{
+  -moz-border-image: url("chrome://messenger/skin/thinbutton-active.png")  2 2 2 2 stretch stretch;
+}
+
+#messengerWindow:not([active="true"]) #button-write
+{
+  -moz-border-image: url("chrome://messenger/skin/thinbutton-inactive.png")  2 2 2 2 stretch stretch;
+  color: darkgrey;
+}
+
+
+
+#mail-search-bar .bubble {
   -moz-border-radius: 4px;
   margin: 0px 2px 0px 0px;
   padding: 0.1em 0.5em;
+  color: black !important;
 }
 
-
-
-
-.bubble[type="contact"] {
-  background-color: #ddddff;
+#mail-search-bar .bubble[type="contact"] {
+  background-color: #FFAA78;
+  border: 1px solid #FF7D31;
 }
 
-.bubble[type="contact-collection"] {
-  background-color: #ffddff;
+#mail-search-bar .bubble[type="contact-collection"] {
+  background-color: #FFC357;
+  border: 1px solid #FFAB0F;
 }
 
-.bubble[type="folder"] {
-  background-color: #ddffdd;
+#mail-search-bar .bubble[type="folder"] {
+  background-color: #A4FF8C;
+  border: 1px solid #5FFD33;
 }
 
 input.bubble-spacer {
   margin: 0px;
+  border: 1px solid orange;
   padding: 0px;
   border: 0px;
   width: 6px;
@@ -60,33 +83,30 @@ input.bubble-spacer {
   background-color: #eeffee;
 }
 
-toolbox { 
-  -moz-appearance: toolbox;
-}
-
-toolbar {
-  -moz-appearance: none;
-  min-width: 1px;
-  min-height: 1px;
-  padding: 8px 4px;
-  background-color: -moz-Dialog;
-}
-
 #button-getmsg2 {
-  list-style-image: url(chrome://mozapps/skin/downloads/downloadIcon.png);
+  padding-top: 5px;
+  padding-left: 10px;
+  padding-right: 0px;
+  list-style-image: url(chrome://messenger/skin/downloadIcon.png);
   line-height: 0px;
-  height: 18px;
+  height: 16px;
 }
 
-toolbarspacer.mail-search-bar-spacer {
-  width: 32px;
+.mail-search-bar-spacer {
+  width: 0px;
+  min-width: 5px !important;
+  padding: 5px;
+  margin: 0px;
 }
+
+
 
 #searchInput2 {
-  color: #222222;
   font-size: 125%;
   font-weight: bold;
 }
+
+
 #searchInput2[empty=true] {
   color: #aaaaaa;
 }
