--- a/content/searchResults.css
+++ b/content/searchResults.css
@@ -60,6 +60,9 @@ a.conversation:visited { color: #14628a; }
 .conversation > .image { position: absolute; left: 0.2em; }
 .conversation > .image > img { width: 48px; height: 48px; }
 
+.conversation > .vis { position: absolute; left: 880px;
+  width: 160px; height: 80px;}
+
 /* MESSAGE */
 /*.message, .replies { position: relative; margin-left: 48px; padding-left: 1em;  }*/
 .message, .replies { position: relative; margin-left: 0px; padding-left: 0em;  }
