--- a/content/searchResults.css
+++ b/content/searchResults.css
@@ -5,102 +5,95 @@
 
 
 /* BASICS */
-body { font-family: sans-serif; font-size: 10pt; margin: 0px; padding: 0px; }
-img { margin: 0em; padding: 0em; border: none; }
-img[src=""] { visibility: hidden; }
+body { font-family: sans-serif; font-size: 80%; margin: 0px; padding: 0px; 
+       background-color: #fff;
+     }
 
-/* CONVERSATION CONTAINER */    
-/************** 
-  CONVERSATION
-    IMAGE
-    MESSAGE
-      HEADER
-        RECIPIENTS
-          RECIPIENT
-          (+DATE)
-        SUBJECT
-        TAGS
-          TAG              
-      BODY
-    REPLIES
-      REPLY
-***************/
+/* CONVERSATIONS + TOOLBOX */
+#toolbox, .conversations { padding: 0.3em; margin: 0px; }
+#toolbox, .conversations { border: 0.2em solid #cee1ef; background-color: #eaf3fa; }
+#toolbox, .conversations { min-width: 600px; max-width: 1024px; }
 
-a.conversation { text-decoration: none; display: block; }
-a.conversation:visited { color: #14628a; }
-.conversation { background-color: #fff; min-height: 5em; }
-.conversation { position: relative; min-width: 600px; max-width: 1024px; }
-.conversation { padding: 0em; margin: 0px; padding-bottom: 1em; border-bottom: 1px solid #ddd;}
-.conversation:last-child { margin-bottom: 0em; }
-.conversation:first-child { margin-top: 0em; border-top: 1px solid #ddd; }
+#toolbox { position: fixed; margin-left: 1em; top: 0em; -moz-border-radius: 0.3em;
+           -moz-border-radius-topleft: 0px; -moz-border-radius-topright: 0px; 
+           border-top: none;
+         }
 
-.conversation > .image { position: absolute; left: 0.2em; }
-.conversation > .image > img { width: 48px; height: 48px; }
+.conversations { margin: 1em; -moz-border-radius: 0.4em;  }
+[hidden="true"] { display: none; }
 
-/* MESSAGE */
-/*.message, .replies { position: relative; margin-left: 48px; padding-left: 1em;  }*/
-.message, .replies { position: relative; margin-left: 0px; padding-left: 0em;  }
+/* CONVERSATION */
+conversation { padding: 0em; padding-top: 1em; margin: 0px; padding-bottom: 1em;
+               border-bottom: 1px solid #ddd; display: block;
+               color: #1a1a1a; background-color: #e8eef7; /* default read */
+              }
+conversation { cursor: pointer; }
+conversation:last-child { margin-bottom: 0em; border-bottom: none; }
+conversation:first-child { border-top: 1px solid #ddd; }
 
-.message .addressing { font-size: x-small; color: #666; }
-.message .addressing:hover { text-decoration: underline; }
-.message .addressing .author { font-size: medium; color: #222; }    
+conversation > .header,
+conversation > .body,
+conversation > .replies,
+conversation > .subject { margin-left: 24px; font-size: 95%; margin-top: 0.1em; }
 
-.message .addressing .date { text-decoration: none; color: #666; font-weight: normal;  }
-.message .addressing .date:before { content: "at "; }
+/* CHECKBOX */
+.checkbox { float: left; text-align: center; width: 24px; height: 24px; margin: 0em 0.2em }
+.checkbox > input { vertical-align: middle; }
 
-.header .recipients { display: inline; font-size: medium; color: #222; }
-.header .recipient:first-child:before { content: ""; }
-.header .recipient:after { content: ", "; }
-.header .recipient:last-child:after { content: ""; }
-.you { text-transform: lowercase; }
+/* HEADER */
+.header { margin-bottom: 0.3em; }
+.header .addressing .verb { font-size: 90%; color: #777; }
+.header .addressing .date { color: #999; font-size: 90%; }
+.header .addressing .date:before { content: "\2014  "; }
 
-.message .subject { text-decoration: underline; font-weight: bold; white-space: nowrap; overflow: hidden; margin-bottom: 0.3em; color: #14628a; }
+.recipients { display: inline; color: #222; }
+.recipients identity:first-child:before { content: ""; }
+.recipients identity:after { content: ", "; }
+.recipients identity:last-child:after { content: ""; }
+.recipients .you { }
 
-.message .body { color: #666; margin: 0.3em 0em; padding: 0em 1em; }
+conversation > .subject { white-space: nowrap; overflow: hidden; 
+                           font-size: 110%;
+                         }
+conversation > .body { color: #555; padding-left: 1em; }
 
-.message .tags span { -moz-border-radius: 0.3em; padding: 0em 0.4em; }
-.message .folder { background-color: #faf0b8; border: 1px solid #ede4af; }
-.message .tag[type="moz"] { background-color: #669999; border: 1px solid #5e8c8c; color: #fff; }
-.message .tag[type="advert"] { background-color: #990033; border: 1px solid #8c002f; color: #fff; }
+conversation > .tags span { -moz-border-radius: 0.3em; padding: 0em 0.4em; }
+conversation > .folder { background-color: #faf0b8; border: 1px solid #ede4af; }
 
 /* REPLIES */
-.replies { padding: 0em 2em; font-size: small; }
+.replies { padding: 0em 2em; padding-right: 7em; }
 
 /* REPLY */
-.replies .reply { border-bottom: 1px solid #dde1eb; margin: 0em; padding: 0em; }
-.replies .reply { background-color: #fff; margin-right: 10em; }
-.replies .reply:only-of-type { border-bottom: none; }
+reply { display: block; }
+reply { border-bottom: 1px solid #b6d6c9; margin: 0em; 
+        margin-top: 0.5em;  padding: 0em; padding-bottom: 0.5em;
+      }
+reply:only-of-type { border-bottom: none; }
+reply:last-child { border-bottom: none; }
 
-.replies .reply.other { background-color: inherit; border: none; margin: 0em; padding: 0em; }
-.replies .reply.other[none='true'] { display:none; }
-.replies .reply > .author { }
-.replies .reply > .author:hover { text-decoration: underline; }
-.replies .reply > .author > img { width: 24px; height: 24px; vertical-align: middle;}
-.replies .reply > .author > .date { color: #adb0a9; }
-.replies .reply > .author > .date:before { content: "at "; }
-.replies .reply > .body { margin-left: 24px; padding-left: 1em; color: #555753;  }
-.replies .reply > .see-all { text-align: center; }
-.replies .reply > .see-all > .unread { font-weight: bold; }
-.replies .reply > .see-all > .unread:before { content: ", "; }
+reply > .author > .date { color: #adb0a9; font-size: 90%; }
+reply > .author > .date:before { content: "\2014 "; }
+reply > .body { padding-left: 1em; color: #666; white-space: nowrap; overflow: hidden;  }
+
+.other { text-align: center; margin: 0.5em 0em; padding: 0em; }
+.other[none='true'] { display:none; }
+.other > .see-all > .unread { font-weight: bold; }
+.other > .see-all > .unread:before { content: ", "; }
 
 /* UNKNOWN SENDERS */
-.conversation.unknown { }
-.conversation.unknown .message .body { display: none; }   
+/* !inAddressBook && !inRemoteImageLoaded */
+conversation[sender="unknown"] { }
+conversation[sender="unknown"] .body { display: none; }   
 
-/* READ CONVERSATIONS */
-a.conversation.read:visited { color: #666; }
-.conversation.read { background-color: #f3f3f3; }
-.conversation.read .subject { color: #333; text-decoration: none; font-weight: normal; }
-
-
-.conversations[hidden="true"] { display: none; }
+/* UNREAD CONVERSATIONS */      
+conversation[unread="true"] { background-color: #fff; }
+conversation[unread="true"] > .header > .subject { font-weight: bold; }
 
 /* BUTTON TOOLBOX */
-.toolbox { visibility: hidden; float: right; text-align: right; margin: 0em;  padding: 0em 0.2em; background-color: #efefef; -moz-border-radius-bottomleft: 1em; border-left: 1px solid #ccc; border-bottom: 1px solid #ccc;  border-right: 1px solid #ccc;  }
-.toolbox button { font-size: x-small; margin: 0.3em 0em; -moz-user-focus: ignore; }
+.toolbox { }
 button.archive { font-weight: bold; }
-button[type="menu"] { border: none; background-color: #ddd; -moz-border-radius: 0.5em; }
-
-/* FLOATING BUTTON TOOLBOX */
-#toolbox { position: absolute; top: 0px; right: 0px; visibility: visible; float: none; }
-
+button[type="menu"] { font-size: small; border: 1px solid #bed1df; background-color: #cee1ef; color: #666; }
+.toolbox > .notifications { float: right; }
+.notifications div { padding: 0.3em 1em; -moz-border-radius: 0.3em; }
+.notifications .alert { background-color: #fcaf3e; color: #111; }
+.notifications .info { background-color: inherit; color: #666; display: none; }
