Setup framework for delete, & junk operations.  doesn't actually modify the db, but looks cool.

--- a/content/bindings.css
+++ b/content/bindings.css
@@ -2,6 +2,10 @@ li[type='threadnode'] {
   -moz-binding: url('chrome://experimentaltoolbar/content/bindings.xml#threadnode');
 }
 
+search-toolbox {
+  -moz-binding: url('chrome://experimentaltoolbar/content/bindings.xml#search-toolbox');
+}
+
 query {
   -moz-binding: url('chrome://experimentaltoolbar/content/bindings.xml#query');
 }
