improve the focus background color

--- a/content/searchResults.css
+++ b/content/searchResults.css
@@ -27,8 +27,8 @@ conversation { padding: 0em; padding-top: 1em; margin: 0px; padding-bottom: 1em;
                border-bottom: 1px solid #ddd; display: block;
                color: #1a1a1a; background-color: #f5f6f7; /* default read */
               }
-conversation:focus { background-color: #f5f6f7; }
-conversation[unread="true"]:focus { background-color: #f5f6f7; }
+conversation:focus { background-color: #e9f0f7; }
+conversation[unread="true"]:focus { background-color: #e9f0f7; }
 conversation { cursor: pointer; }
 conversation:last-child { margin-bottom: 0em; border-bottom: none; }
 conversation:first-child { border-top: 1px solid #ddd; }
