--- a/content/searchResults.css
+++ b/content/searchResults.css
@@ -12,7 +12,7 @@ body { font-family: sans-serif; font-size: 80%; margin: 0px; padding: 0px;
 /* CONVERSATIONS + TOOLBOX */
 #toolbox, .conversations { padding: 0.3em; margin: 0px; }
 #toolbox, .conversations { border: 0.2em solid #cee1ef; background-color: #eaf3fa; }
-#toolbox, .conversations { min-width: 600px; max-width: 1024px; }
+#toolbox, .conversations { min-width: 600px; max-width: 900px; }
 
 #toolbox { position: fixed; margin-left: 1em; top: 0em; -moz-border-radius: 0.3em;
            -moz-border-radius-topleft: 0px; -moz-border-radius-topright: 0px; 
@@ -23,64 +23,67 @@ body { font-family: sans-serif; font-size: 80%; margin: 0px; padding: 0px;
 [hidden="true"] { display: none; }
 
 /* CONVERSATION */
-conversation { padding: 0em; padding-top: 1em; margin: 0px; padding-bottom: 1em;
-               border-bottom: 1px solid #ddd; display: block;
+conversation { padding: 1em 1px; margin: 0px;
+               border-top: 1px solid transparent; border-bottom: 1px solid #ddd; 
+               display: block;
                color: #1a1a1a; background-color: #f5f6f7; /* default read */
               }
-conversation:focus { background-color: #e9f0f7; }
-conversation[unread="true"]:focus { background-color: #e9f0f7; }
-conversation { cursor: pointer; }
-conversation:last-child { margin-bottom: 0em; border-bottom: none; }
+conversation:focus { border: 1px dotted #111; padding: 1em 0px; }
+conversation[unread="true"]:focus { border: 1px dotted #111; padding: 1em 0px; }
+conversation:focus:last-child { border: 1px dotted #111; padding: 1em 0px; }
+conversation:focus:first-child { border: 1px dotted #111; padding: 1em 0px; }
+conversation:last-child { border-bottom: 1px solid transparent; }
 conversation:first-child { border-top: 1px solid #ddd; }
 
-conversation > .header,
-conversation > .body,
-conversation > .replies,
-conversation > .subject { margin-left: 24px; font-size: 95%; margin-top: 0.1em; }
+conversation > .target > .header,
+conversation > .target > .body,
+conversation > .target > .subject,
+conversation > .replies { margin-left: 24px; font-size: 95%; }
+
+conversation > .target { display: block; padding: 0.2em 0em; padding-right: 1em; }
+conversation > .target { cursor: pointer; }
 
 /* CHECKBOX */
-.checkbox { float: left; text-align: center; width: 24px; height: 24px; margin: 0em 0.2em }
+.checkbox { float: left; text-align: center; width: 24px; height: 24px; 
+            padding: 0.1em 0.2em }
 .checkbox > input { vertical-align: middle; }
 
 /* HEADER */
-.header { margin-bottom: 0.3em; }
+.header { margin-bottom: 0.5em; }
+.header .oldestMessageDate { float: right; padding-left: 2em; }
 .header .addressing .verb { font-size: 90%; color: #777; }
-.header .addressing .date { color: #999; font-size: 90%; }
+.header .addressing .date, .header .oldestMessageDate { color: #999; font-size: 90%; }
 .header .addressing .date:before { content: "\2014  "; }
 
 .recipients { display: inline; color: #222; }
 .recipients identity:first-child:before { content: ""; }
 .recipients identity:after { content: ", "; }
 .recipients identity:last-child:after { content: ""; }
+/* this will limit the number of recipients shown to the first 7 
+   also adding an elipsis '...' after the 6th (if exists) */
+.recipients identity:nth-child(n+7) { display: none; }
+.recipients identity:nth-child(0n+6):after { content: "..."; }
 .recipients .you { }
 
-conversation > .subject { white-space: nowrap; overflow: hidden; 
-                           font-size: 110%;
-                         }
-conversation > .body { color: #555; padding-left: 1em; }
+conversation > .target > .header > .subject { white-space: nowrap; overflow: hidden; 
+                                              font-size: 115%; font-weight: bold; 
+                                              color: #777; }
+conversation > .target > .body { color: #555; padding-left: 1em; }
 
-conversation > .tags span { -moz-border-radius: 0.3em; padding: 0em 0.4em; }
-conversation > .folder { background-color: #faf0b8; border: 1px solid #ede4af; }
+conversation > .target > .tags span { -moz-border-radius: 0.3em; padding: 0em 0.4em; }
+conversation > .target > .folder { background-color: #faf0b8; border: 1px solid #ede4af; }
 
 /* REPLIES */
-.replies { padding: 0em 2em; padding-right: 7em; }
+.replies { padding: 0em 3em; }
 
 /* REPLY */
-reply { display: block; }
-reply { border-bottom: 1px solid #b6d6c9; margin: 0em; 
-        margin-top: 0.5em;  padding: 0em; padding-bottom: 0.5em;
-      }
-reply:only-of-type { border-bottom: none; }
-reply:last-child { border-bottom: none; }
+reply { display: list-item; list-style: none; margin: 0.5em 0em; }
+reply:hover { list-style: none outside url("chrome://messenger/skin/icons/arrow/arrow-right.png"); }
+reply { cursor: pointer; }
 
 reply > .author > .date { color: #adb0a9; font-size: 90%; }
 reply > .author > .date:before { content: "\2014 "; }
 reply > .body { padding-left: 1em; color: #666; white-space: nowrap; overflow: hidden;  }
-
-.other { text-align: center; margin: 0.5em 0em; padding: 0em; }
-.other[none='true'] { display:none; }
-.other > .see-all > .unread { font-weight: bold; }
-.other > .see-all > .unread:before { content: ", "; }
 
 /* UNKNOWN SENDERS */
 /* !inAddressBook && !inRemoteImageLoaded */
@@ -89,7 +92,7 @@ conversation[sender="unknown"] .body { display: none; }
 
 /* UNREAD CONVERSATIONS */      
 conversation[unread="true"] { background-color: #fff; }
-conversation[unread="true"] > .header > .subject { font-weight: bold; }
+conversation[unread="true"] > .target > .header > .subject { color: #111; }
 
 /* BUTTON TOOLBOX */
 search-toolbox { display: block; }
