--- a/content/searchResults.css
+++ b/content/searchResults.css
@@ -26,7 +26,7 @@ body { font-family: sans-serif; font-size: 80%; margin: 0px; padding: 0px;
 conversation { padding: 1em 1px; margin: 0px;
                border-top: 1px solid transparent; border-bottom: 1px solid #ddd; 
                display: block;
-               color: #1a1a1a; background-color: #f5f6f7; /* default read */
+               color: #555; background-color: #f5f6f7; /* default read */
               }
 conversation:focus { border: 1px dotted #111; padding: 1em 0px; }
 conversation[unread="true"]:focus { border: 1px dotted #111; padding: 1em 0px; }
@@ -67,7 +67,7 @@ conversation > .target { cursor: pointer; }
 
 conversation > .target > .header > .subject { white-space: nowrap; overflow: hidden; 
                                               font-size: 115%; font-weight: bold; 
-                                              color: #777; }
+                                              color: #555; }
 conversation > .target > .body { color: #555; padding-left: 1em; }
 
 conversation > .target > .tags span { -moz-border-radius: 0.3em; padding: 0em 0.4em; }
@@ -93,6 +93,7 @@ conversation[sender="unknown"] .body { display: none; }
 /* UNREAD CONVERSATIONS */      
 conversation[unread="true"] { background-color: #fff; }
 conversation[unread="true"] > .target > .header > .subject { color: #111; }
+conversation[unread="true"] > .target > .header { color: #111; }
 
 /* BUTTON TOOLBOX */
 search-toolbox { display: block; }
