--- a/content/index.css
+++ b/content/index.css
@@ -1,11 +1,17 @@
 .threader { position: fixed; width: 12em; }
 .thread.top { }
-.thread { font-size: small; }
-.thread li { white-space:nowrap;overflow:hidden;margin-right:1em; }
-.thread .name { padding: 0.1em 0.5em; -moz-border-radius: 0.3em; cursor: pointer; }
-.thread li.selected .name { background-color: #e9e9e9; }
-.thread .name:hover { text-decoration: underline; }
+.thread { font-size: small; margin: 0em; padding: 0em; }
+.thread > li { white-space: nowrap; overflow: hidden; margin: 0px; 
+               margin-right: 1em; cursor: pointer; padding: 0.2em 0em; 
+              -moz-border-radius-topright: 0.3em; 
+              -moz-border-radius-bottomright: 0.3em;
+             }
+.thread > li[unread="true"] { font-weight: bold; }
+.thread > li > .name { padding: 0.1em 0.5em; }
 
-ul, li { list-style: none; padding: 0em; margin: 0em; }
-ul ul { padding-left: 1em; }
-li { -moz-border-radius-bottomleft: 0.5em; -moz-border-radius-topleft: 0.5em; padding: 0.2em 0em; }
+ul.thread > li.selected { color: #111; background-color: #cee1ef; }
+ul.thread.selected { border-color: #cee1ef; }
+
+ul.thread { border-left: 0.3em solid transparent; }
+ul.thread > li:hover { background-color: #eaf3fa;  }
+ul.thread > li > .name:hover { text-decoration: underline; }
